kubernetes/apps/default/semaphore/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  labels:
    app: semaphore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
        - name: semaphore
          image: semaphoreui/semaphore:v2.11.2
          # ports:
          #   - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore
spec:
  selector:
    app: semaphore
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore
spec:
  ingressClassName: external
  rules:
    - host: &host semaphore.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semaphore
                port:
                  number: 3000
  tls:
    - hosts: [*host]
      secretName: semaphore-tls
